SERVER-8172 Exclude $not query operator fields from new upsert document.